@@ -18,6 +18,7 @@
 "/tmp/%@"
 "0x0"
 "1.00"
+"10"
 "1000"
 "14"
 "4096"
@@ -154,6 +155,7 @@
 "WebKitJavaScriptEnabled"
 "WebKitLogLevel"
 "WebKitMinimumFontSize"
+"WebKitPageCacheSizePreferenceKey"
 "WebKitPluginsEnabled"
 "WebKitResourceTimedLayoutDelay"
 "WebKitResourceTimedLayoutEnabled"
